--- a/recommendation_system/requirements.txt
+++ b/recommendation_system/requirements.txt
@@ -1,13 +1,6 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2580
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 streamlit==1.35.0\
-pandas==2.2.2\
-scikit-learn==1.5.0\
-joblib==1.4.2\
-Pillow==10.3.0\
-requests==2.32.3}
+streamlit==1.35.0
+pandas==2.2.2
+scikit-learn==1.5.0
+joblib==1.4.2
+Pillow==10.3.0
+requests==2.32.3
