--- a/recommendation_system/requirements.txt
+++ b/recommendation_system/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-Pillow
-requests
-joblib
-scikit-surprise
+streamlit==1.30.0
+pandas==2.2.2
+Pillow==10.3.0
+requests==2.31.0
+joblib==1.3.2
+scikit-surprise==1.1.4
+
